Pseudent bug - adding margin spacing in ReST.

--- a/sites/all/modules/cybercourse/pseudents/css/pseudents.css
+++ b/sites/all/modules/cybercourse/pseudents/css/pseudents.css
@@ -69,7 +69,7 @@ table#pseudent-choose-table td.selected {
 }
 
 .pseudent-content {
-  float: left;
+  /*float: left;*/
 }
 
 /* 'Back to pseudent list' link. */
